# docs/swagger.yaml
@@ -365,6 +365,28 @@ paths:
           schema:
             $ref: '#/definitions/api.ErrorResponse'
       summary: Download Torrent File
+  /torrents/{infoHash}/pause:
+    get:
+      description: pause torrent from service
+      operationId: pause-torrent
+      parameters:
+      - description: torrent info hash
+        in: path
+        name: infoHash
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.MessageResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/api.ErrorResponse'
+      summary: Pause Torrent
   /torrents/{infoHash}/remove:
     get:
       description: remove torrent from service
@@ -391,6 +413,28 @@ paths:
           schema:
             $ref: '#/definitions/api.ErrorResponse'
       summary: Remove Torrent
+  /torrents/{infoHash}/resume:
+    get:
+      description: resume a paused torrent
+      operationId: resume-torrent
+      parameters:
+      - description: torrent info hash
+        in: path
+        name: infoHash
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.MessageResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/api.ErrorResponse'
+      summary: Resume Torrent
   /torrents/{infoHash}/status:
     get:
       description: get torrent status
